# gen-diff

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test_and_lint.yml
gendiff/: __init__.py  data_comparison.py  diff_states.py  file_processing.py  formatter.py  gen_diff.py  parser.py
gendiff/formatters/: __init__.py  f_json.py  f_plain.py  f_stylish.py
gendiff/scripts/: gendiff.py  gendiff_script.py
tests/: func_launch.py  test_gen_diff.py
tests/fixtures/: correct_diff.txt  file2.json  func_launch.py  mein_new_raw_diff.txt  mein_new_raw_diff_nasted.txt  mein_raw_diff_nasted.py  wrong_diff.txt
tests/fixtures/flat/: file2.yml
