[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "diff generator"
authors = ["Ilya Bagrov <ilya.b.only@gmail.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
